[tool.poetry]
name = "twi_bot"
version = "0.1.0"
description = ""
authors = ["vaclav"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.7.4"
loguru = "^0.5.3"
SQLAlchemy = "^1.4.25"
tweepy = "^4.1.0"
APScheduler = "^3.8.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
